<resources>
    <string name="dynisf_adjust_sensitivity">Enable TDD based sensitivity ratio for basal and glucose target modification</string>
    <string name="dynisf_adjust_sensitivity_summary">Uses the last 24h TDD/7D TDD to calculate sensitivity ratio used for increasing or decreasing basal rate, and also adjust glucose target if these options are enabled, in the same way Autosens does. It is recommended to start with this option turned off</string>
    <string name="DynISFAdjust_title" formatted="false">DynamicISF Adjustment Factor %</string>
    <string name="DynISFAdjust_summary" formatted="false">Adjustment factor for DynamicISF. Set more than 100% for more aggressive correction doses, and less than 100% for less aggressive corrections.</string>
    <string name="high_temptarget_raises_sensitivity_title">High temptarget raises sensitivity</string>
    <string name="high_temptarget_raises_sensitivity_summary"><![CDATA[Raise sensitivity for temptargets >= 100]]></string>
    <string name="low_temptarget_lowers_sensitivity_title">Low temptarget lowers sensitivity</string>
    <string name="low_temptarget_lowers_sensitivity_summary"><![CDATA[Lower sensitivity for temptargets < 100]]></string>
    <string name="openapssmb">OpenAPS SMB</string>
    <string name="openaps_smb_dynamic_isf">Dynamic ISF</string>
    <string name="smb_interval_summary">How frequently SMBs will be given in min</string>
    <string name="resistance_lowers_target_title">Resistance lowers target</string>
    <string name="resistance_lowers_target_summary">When resistance is detected, lower the target glucose</string>
    <string name="sensitivity_raises_target_title">Sensitivity raises target</string>
    <string name="sensitivity_raises_target_summary">When sensitivity is detected, raise the target glucose</string>
    <string name="openapsma_disabled">Plugin is disabled</string>
    <string name="openapsma_no_glucose_data">No glucose data available</string>
    <string name="openaps_no_as_data">No autosens data available</string>
    <string name="dynisf_shortname">DYNISF</string>
    <string name="executing">Executing</string>
    <string name="openapsama">OpenAPS AMA</string>
    <string name="array_of_elements">Array of %1$d elements.\nActual value:</string>
    <string name="oaps_shortname">OAPS</string>
    <string name="description_ama">State of the algorithm in 2017</string>
    <string name="description_smb">Most recent algorithm for advanced users</string>
    <string name="description_smb_dynamic_isf">Most recent algorithm for advanced users with dynamic/automatic ISF</string>
    <string name="openapsama_bolus_snooze_dia_divisor">Bolus snooze dia divisor</string>
    <string name="openapsma_run">Run now</string>
    <string name="openapsma_last_run_label">Last run</string>
    <string name="openapsma_input_parameters_label">Input parameters</string>
    <string name="openapsma_glucose_status_label">Glucose status</string>
    <string name="openapsma_current_temp_label">Current temp</string>
    <string name="openapsma_iob_data_label">IOB data</string>
    <string name="openapsma_profile_label">Profile</string>
    <string name="openapsma_meal_data_label">Meal data</string>
    <string name="openapsma_request_label">Request</string>
    <string name="constraints">Constraints</string>
    <string name="openapsma_autosensdata_label">Autosens data</string>
    <string name="openapsma_script_debug_data_label">Script debug</string>
    <string name="openapsama_use_autosens">Use Autosens feature</string>
    <string name="openapsma_max_basal_title">Max U/h a Temp Basal can be set to</string>
    <string name="openapsma_max_basal_summary">This value is called max basal in OpenAPS context</string>
    <string name="openapsma_max_iob_title">Maximum basal IOB OpenAPS can deliver [U]</string>
    <string name="openapsma_max_iob_summary">This value is called Max IOB in OpenAPS context\nThis is maximal insulin in [U] APS can deliver at once.</string>
    <string name="openapsama_autosens_adjust_targets_summary">Default value: true\nThis is used to allow autosens to adjust BG targets, in addition to ISF and basals.</string>
    <string name="openapsama_autosens_adjust_targets">Autosens adjust targets, too</string>
    <string name="openapsama_min_5m_carb_impact" translatable="false">min_5m_carbimpact</string>
    <string name="openapsama_min_5m_carb_impact_summary">Default value: 3.0 (AMA) or 8.0 (SMB). This is a setting for default carb absorption impact per 5 minutes. The default is an expected 3mg/dl/5min. This affects how fast COB are decayed, and how much carb absorption is assumed in calculating future predicted BG, when BG is falling more than expected, or not rising as much as expected.</string>
    <string name="openapsama_max_daily_safety_multiplier_summary">Default value: 3 This is a key OpenAPS safety cap. What this does is limit your basals to be 3x (in this people) your biggest basal rate. You likely will not need to change this, but you should be aware that’s what is discussed about “3x max daily; 4x current” for safety caps.</string>
    <string name="openapsama_current_basal_safety_multiplier_summary">Default value: 4 This is the other half of the key OpenAPS safety caps, and the other half of “3x max daily; 4x current” of the safety caps. This means your basal, regardless of max basal set on your pump, cannot be any higher than this number times the current level of your basal. This is to prevent people from getting into dangerous territory by setting excessively high max basals before understanding how the algorithm works. Again, the default is 4x; most people will never need to adjust this and are instead more likely to need to adjust other settings if they feel like they are “running into” this safety cap.</string>
    <string name="openapsama_bolus_snooze_dia_divisor_summary">Default value: 2\nBolus snooze is enacted after you do a meal bolus, so the loop won’t counteract with low temps when you’ve just eaten. The example here and default is 2; so a 3 hour DIA means that bolus snooze will be gradually phased out over 1.5 hours (3DIA/2).</string>
    <string name="openapsama_link_to_preference_json_doc_txt">Attention!\nNormally you do not have to change these values below. Please CLICK HERE and READ the text and make sure you UNDERSTAND it before change any of these values.</string>
    <string name="openapsama_link_to_preference_json_doc" translatable="false">http://openaps.readthedocs.io/en/latest/docs/walkthrough/phase-3/beyond-low-glucose-suspend.html</string>
    <string name="always_use_short_avg">Always use short average delta instead of simple delta</string>
    <string name="always_use_short_avg_summary">Useful when data from unfiltered sources like xDrip+ gets noisy.</string>
    <string name="openapsama_max_daily_safety_multiplier">Max daily safety multiplier</string>
    <string name="openapsama_current_basal_safety_multiplier">Current basal safety multiplier</string>
    <string name="openapssmb_max_iob_title">Maximum total IOB OpenAPS can\'t go over [U]</string>
    <string name="openapssmb_max_iob_summary">This value is called Max IOB in OpenAPS context\nOpenAPS will not add more insulin if current IOB is greater than this value</string>
    <string name="enable_uam">Enable UAM</string>
    <string name="enable_smb">Enable SMB</string>
    <string name="enable_smb_summary">Use Super Micro Boluses instead of temp basal for faster action</string>
    <string name="enable_uam_summary">Detection of Unannounced meals</string>
    <string name="enable_smb_always">Enable SMB always</string>
    <string name="key_openapsaimi_settings">key_openapsaimi_settings</string>
    <string name="openapsaimi">"OpenapsAIMI Settings "</string>
    <string name="openapsaimi_maxsmb_summary">Value of max smb size</string>
    <string name="key_openapsaimi_max_smb">key_openapsaimi_max_smb</string>
    <string name="openapsaimi_maxsmb_title">OpenapsAIMI Max SMB</string>
    <string name="key_aimiweight">key_aimiweight</string>
    <string name="key_tdd7">key_tdd7</string>
    <string name="key_cho">key_cho</string>
    <string name="count_steps_watch">count_steps_watch</string>
    <string name="oaps_aimi_evening_factor_summary">% of Reactivity of the plugin between 6 pm and midnight</string>
    <string name="key_oaps_aimi_evening_factor">key_oaps_aimi_evening_factor</string>
    <string name="oaps_aimi_evening_factor_title">Evening Reactivity Percentage</string>
    <string name="oaps_aimi_afternoon_factor_title">Afternoon Reactivity Percentage</string>
    <string name="oaps_aimi_morning_factor_title">Morning Reactivity Percentage</string>
    <string name="oaps_aimi_morning_factor_summary">Morning Reactivity Percentage between midnight and 11 am</string>
    <string name="key_oaps_aimi_morning_factor">key_oaps_aimi_morning_factor</string>
    <string name="oaps_aimi_afternoon_factor_summary">Afternoon reactivity percentage between 12pm and 6 pm</string>
    <string name="key_oaps_aimi_afternoon_factor">key_oaps_aimi_afternoon_factor</string>
    <string name="key_oaps_aimi_hyper_factor">key_oaps_aimi_hyper_factor</string>
    <string name="key_DynISFAdjusthyper">key_DynISFAdjusthyper</string>
    <string name="oaps_aimi_hyper_factor_summary"><![CDATA[Reactivity factor when bg > 180]]></string>
    <string name="oaps_aimi_hyper_factor_title"><![CDATA[Reactivity factor BG > 180]]></string>
    <string name="DynISFAdjusthyper_summary"><![CDATA[Increasing this value will increase the velocity to send smb when bg > 180]]></string>
    <string name="DynISFAdjusthyper_title"><![CDATA[Dynisf Adjustment factor % BG > 180]]></string>
    <string name="key_enable_basal">key_enable_basal</string>
    <string name="prebolus_meal_mode_summary">If you set a note in action page, with the work meal, you will receive one time this value like a pre-bolus.</string>
    <string name="key_prebolus_meal_mode">key_prebolus_meal_mode</string>
    <string name="prebolus_meal_mode_title">Meal mode pre-bolus</string>
    <string name="prebolus_highcarb_mode_title">Mode high carb pre-bolus</string>
    <string name="key_prebolus_highcarb_mode">key_prebolus_highcarb_mode</string>
    <string name="prebolus_highcarb_mode_summary">If you set a note in action page, with the word highcarb, you will receive this pre-bolus one time.</string>
    <string name="key_nb_day_ML_training">key_nb_day_ML_training</string>
    <string name="key_enable_ML_training">key_enable_ML_training</string>
    <string name="nb_minutes_ML_training_title">Nb minutes to train the data</string>
    <string name="number_minutes_training_summary">Nb minutes to train the data for the ML engine</string>
    <string name="number_epoch_training_summary">NB Epoch to train the data</string>
    <string name="nb_epoch_ML_training_title">NB Epoch to train the data</string>
    <string name="key_nb_epoch_ML_training">key_nb_epoch_ML_training</string>
    <string name="key_nb_learningrate_ML_training">key_nb_learningrate_ML_training</string>
    <string name="number_learningrate_training_summary">nb learning rate to train the data</string>
    <string name="nb_learningrate_ML_training_title">learning rate to train the data</string>
    <string name="number_iteration_training_summary">Nb time it will try before stopping the loop if it can not get a satisfying result.</string>
    <string name="key_nb_iteration_ML_training">key_nb_iteration_ML_training</string>
    <string name="nb_iteration_ML_training_title">NB iteration stopping the loop</string>
    <string name="DynISF_Adjust_summary" formatted="false">Increase this value greater than 100 if you want to receive more smb. The opposite is true if you receive too much smb.</string>
    <string name="DynISF_Adjust_title" formatted="false">DynISF factor to increase or discrease the number of SMB</string>
</resources>